<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#f4f4f4"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/security_remind"
        android:textColor="#888888"
        android:textSize="16sp"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/rfid"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_rfid_uuid"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="Uuid1111111111"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/current_data"
            android:paddingLeft="20dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tv_rfid_data"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="99999999999999999"/>

    </LinearLayout>

    <View
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/write_data"
            android:paddingLeft="20dp"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="top"
            android:maxLines="3"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_bg"
            android:lines="3"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_red_bg"
        android:textColor="@color/white"
        android:text="@string/write_rfid"
        android:textSize="20sp" />

</LinearLayout>