<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/tv_task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="周盘点"
        android:textSize="30sp"
        android:textStyle="bold">

    </TextView>
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_below="@+id/tv_task_name"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jd"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:textColor="@android:color/holo_green_dark"
            android:layout_marginRight="5dp"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:text="33"
            android:textSize="18sp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devices"
            android:textSize="18sp">
        </TextView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll2"
        android:layout_below="@+id/ll1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rwxfr"
            android:textColor="#90909E"/>
        <TextView
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#90909E"
            android:text="*********"
          />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_below="@+id/ll2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/begin_time"
            android:textColor="#90909E"/>
        <TextView
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#90909E"
            android:text="2019-10-12 12:00:00"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_below="@+id/ll3"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_time"
            android:textColor="#90909E"/>
        <TextView
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#90909E"
            android:text="2019-10-12 12:00:00"
            />
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/ll4"
        android:id="@+id/recycle_view_device_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <RelativeLayout
        android:layout_below="@+id/recycle_view_device_list"
        android:background="@color/white"
        android:id="@+id/rl_device_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        ></RelativeLayout>

    <Button
        android:id="@+id/btn_scan"
        android:layout_below="@id/rl_device_list"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/begin_scan"
        android:textColor="@color/white"
        android:background="@drawable/button_green_bg"
        android:layout_width="match_parent"></Button>

    <Button
        android:id="@+id/btn_done_task"
        android:layout_below="@id/btn_scan"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/done_task"
        android:background="@drawable/button_red_bg"
        android:textColor="@color/white"
        android:layout_width="match_parent"></Button>

</RelativeLayout>