<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_device_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <include layout="@layout/common_layout_header" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/ll_bg"
            android:orientation="vertical"
            >
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:id="@+id/tv_device_name"
                android:text="设备1"
                android:layout_marginLeft="20dp"
                />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/id"/>
                <TextView
                    android:id="@+id/tv_device_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="332"
                    android:textColor="@color/white"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_margin="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/device_id"
            android:textColor="#90909E"/>
        <TextView
            android:id="@+id/tv_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#90909E"
            android:text="qwqwqwqw"
            android:gravity="end"/>
    </LinearLayout>

    <View
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc"/>


    <LinearLayout
        android:layout_margin="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_modify_time"
            android:textColor="#90909E"/>
        <TextView
            android:id="@+id/tv_device_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#90909E"
            android:text="2019-12-18 12:00:00"
            android:gravity="end"/>
    </LinearLayout>


    <View
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc"/>



    <LinearLayout
        android:layout_margin="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rfid"
            android:textColor="#90909E"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#90909E"
            android:text="uuid1111111111"
            android:gravity="end"/>
    </LinearLayout>


    <View
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc"/>


    <Button
        android:id="@+id/btn_device_write_rfid"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_red_bg"
        android:textColor="@color/white"
        android:text="@string/write_rfid"
        android:textSize="20sp" />


    <LinearLayout
        android:id="@+id/ll_show_chosed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ffffff">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_chosed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

    </LinearLayout>
</LinearLayout>